Parte 3 do curso finalizada

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -12,5 +12,7 @@
            <a [routerLink]="['/']">Please, login!</a>
         </span>
     </ng-template>
-    
+    <div class="fixed-top">
+        <app-alert></app-alert>
+    </div>
 </header>
