--- a/src/app/home/signup/signup.component.html
+++ b/src/app/home/signup/signup.component.html
@@ -1,12 +1,12 @@
-<form [formGroup]="signupForm" class="form mt-4" (submit)="signUp()">
+<form #form="ngForm" [formGroup]="signupForm" class="form mt-4" (submit)="signUp()">
     <div class="form-group">
         <input #emailInput formControlName="email" class="form-control" placeholder="email" autofocus>
         <app-vmessage
-            *ngIf="signupForm.get('email').errors?.required"
+            *ngIf="signupForm.get('email').errors?.required && (form.submitted || signupForm.get('email').touched)"
             text="Email is required!">
         </app-vmessage>
         <app-vmessage
-            *ngIf="signupForm.get('email').errors?.email"
+            *ngIf="signupForm.get('email').errors?.email && form.submitted"
             text="Invalid e-mail">
         </app-vmessage>
     </div>
@@ -14,15 +14,15 @@
     <div class="form-group">
         <input formControlName="fullName" class="form-control" placeholder="full name">
         <app-vmessage
-            *ngIf="signupForm.get('fullName').errors?.required"
+            *ngIf="signupForm.get('fullName').errors?.required && form.submitted"
             text="Full name is required!">
         </app-vmessage>
         <app-vmessage
-            *ngIf="signupForm.get('fullName').errors?.minlength"
+            *ngIf="signupForm.get('fullName').errors?.minlength && form.submitted"
             text="Minimum length is 2">
         </app-vmessage>
         <app-vmessage
-            *ngIf="signupForm.get('fullName').errors?.maxlength"
+            *ngIf="signupForm.get('fullName').errors?.maxlength && form.submitted"
             text="Maximum length is 40">
         </app-vmessage>
     </div>
@@ -30,19 +30,19 @@
     <div class="form-group">
         <input formControlName="userName" class="form-control" placeholder="user name">
         <app-vmessage
-            *ngIf="signupForm.get('userName').errors?.required"
+            *ngIf="signupForm.get('userName').errors?.required && form.submitted"
             text="Username is required!">
         </app-vmessage>
         <app-vmessage
-            *ngIf="signupForm.get('userName').errors?.minlength"
+            *ngIf="signupForm.get('userName').errors?.minlength && form.submitted"
             text="Minimum length is 2">
         </app-vmessage>
         <app-vmessage
-            *ngIf="signupForm.get('userName').errors?.maxlength"
+            *ngIf="signupForm.get('userName').errors?.maxlength && form.submitted"
             text="Maximum length is 30">
         </app-vmessage>
         <app-vmessage
-            *ngIf="signupForm.get('userName').errors?.lowerCase"
+            *ngIf="signupForm.get('userName').errors?.lowerCase && form.submitted"
             text="Must be lowercase">
         </app-vmessage>
 
@@ -56,20 +56,25 @@
     <div class="form-group">
         <input formControlName="password" type="password" class="form-control" placeholder="password">
         <app-vmessage
-            *ngIf="signupForm.get('password').errors?.required"
+            *ngIf="signupForm.get('password').errors?.required && form.submitted"
             text="Password is required!">
         </app-vmessage>
         <app-vmessage
-            *ngIf="signupForm.get('password').errors?.minlength"
+            *ngIf="signupForm.get('password').errors?.minlength && form.submitted"
             text="Minimum length is 8">
         </app-vmessage>
         <app-vmessage
-            *ngIf="signupForm.get('password').errors?.maxlength"
+            *ngIf="signupForm.get('password').errors?.maxlength && form.submitted"
             text="Maximum length is 14">
+        </app-vmessage>
+
+        <app-vmessage
+            *ngIf="signupForm.errors?.userNamePassword"
+            text="Username and password must be different">
         </app-vmessage>
     </div>
 
-    <button [disabled]="signupForm.invalid || signupForm.pending" class="btn btn-primary btn-block">Register</button>
+    <button class="btn btn-primary btn-block">Register</button>
 
     <p>Already a user? <a [routerLink]="['']">Sign In!</a></p>
 </form>
